plugins/binding/capi/include/TellusimCMath.h

/*
 */
struct TSQuaternionf;
struct TSQuaterniond;
typedef struct TSVector2f {
	union {
		struct {
			float32_t x, y;
		};
		float32_t v[2];
	};
} TSVector2f;
typedef struct TSVector2d {
	union {
		struct {
			float64_t x, y;
		};
		float64_t v[2];
	};
} TSVector2d;
typedef struct TSVector3f {
	union {
		struct {
			float32_t x, y, z;
		};
		struct {
			TSVector2f xy;
			float32_t xy_z;
		};
		float32_t v[3];
	};
} TSVector3f;
typedef struct TSVector3d {
	union {
		struct {
			float64_t x, y, z;
		};
		struct {
			TSVector2d xy;
			float64_t xy_z;
		};
		float64_t v[3];
	};
} TSVector3d;
/*
 */
TS_CAPI void TS_CCALL tsMatrix4x3f_set(TSMatrix4x3f *m, const float32_t *src, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix4x3d_set(TSMatrix4x3d *m, const float64_t *src, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix4x3f_get(const TSMatrix4x3f *m, float32_t *dest, uint32_t size, bool_t row_major);
TS_CAPI void TS_CCALL tsMatrix4x3d_get(const TSMatrix4x3d *m, float64_t *dest, uint32_t size, bool_t row_major);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_scale(TSMatrix4x3f *ret, float32_t x, float32_t y, float32_t z);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_scale(TSMatrix4x3d *ret, float64_t x, float64_t y, float64_t z);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_translate(TSMatrix4x3f *ret, float32_t x, float32_t y, float32_t z);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_translate(TSMatrix4x3d *ret, float64_t x, float64_t y, float64_t z);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotateX(TSMatrix4x3f *ret, float32_t angle);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_rotateX(TSMatrix4x3d *ret, float64_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotateY(TSMatrix4x3f *ret, float32_t angle);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_rotateY(TSMatrix4x3d *ret, float64_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotateZ(TSMatrix4x3f *ret, float32_t angle);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_rotateZ(TSMatrix4x3d *ret, float64_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_rotate(TSMatrix4x3f *ret, const TSVector3f *axis, float32_t angle);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_rotate(TSMatrix4x3d *ret, const TSVector3d *axis, float64_t angle);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_lookAt(TSMatrix4x3f *ret, const TSVector3f *from, const TSVector3f *to, const TSVector3f *up);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_lookAt(TSMatrix4x3d *ret, const TSVector3d *from, const TSVector3d *to, const TSVector3d *up);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_placeTo(TSMatrix4x3f *ret, const TSVector3f *to, const TSVector3f *from, const TSVector3f *up);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_placeTo(TSMatrix4x3d *ret, const TSVector3d *to, const TSVector3d *from, const TSVector3d *up);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_compose(TSMatrix4x3f *ret, const TSVector3f *t, const struct TSQuaternionf *r, const TSVector3f *s);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_compose(TSMatrix4x3d *ret, const TSVector3d *t, const struct TSQuaterniond *r, const TSVector3d *s);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_basis(TSMatrix4x3f *ret, const TSVector3f *normal, const TSVector3f *t);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_basis(TSMatrix4x3d *ret, const TSVector3d *normal, const TSVector3d *t);
TS_CAPI TSVector2f* TS_CCALL tsMatrix4x3f_mul2(TSVector2f *ret, const TSMatrix4x3f *m, const TSVector2f *v);
TS_CAPI TSVector2d* TS_CCALL tsMatrix4x3d_mul2(TSVector2d *ret, const TSMatrix4x3d *m, const TSVector2d *v);
TS_CAPI TSVector3f* TS_CCALL tsMatrix4x3f_mul3(TSVector3f *ret, const TSMatrix4x3f *m, const TSVector3f *v);
TS_CAPI TSVector3d* TS_CCALL tsMatrix4x3d_mul3(TSVector3d *ret, const TSMatrix4x3d *m, const TSVector3d *v);
TS_CAPI TSVector4f* TS_CCALL tsMatrix4x3f_mul4(TSVector4f *ret, const TSMatrix4x3f *m, const TSVector4f *v);
TS_CAPI TSVector4d* TS_CCALL tsMatrix4x3d_mul4(TSVector4d *ret, const TSMatrix4x3d *m, const TSVector4d *v);
TS_CAPI TSVector2f* TS_CCALL tsMatrix4x3f_mul2t(TSVector2f *ret, const TSVector2f *v, const TSMatrix4x3f *m);
TS_CAPI TSVector2d* TS_CCALL tsMatrix4x3d_mul2t(TSVector2d *ret, const TSVector2d *v, const TSMatrix4x3d *m);
TS_CAPI TSVector3f* TS_CCALL tsMatrix4x3f_mul3t(TSVector3f *ret, const TSVector3f *v, const TSMatrix4x3f *m);
TS_CAPI TSVector3d* TS_CCALL tsMatrix4x3d_mul3t(TSVector3d *ret, const TSVector3d *v, const TSMatrix4x3d *m);
TS_CAPI TSVector4f* TS_CCALL tsMatrix4x3f_mul4t(TSVector4f *ret, const TSVector4f *v, const TSMatrix4x3f *m);
TS_CAPI TSVector4d* TS_CCALL tsMatrix4x3d_mul4t(TSVector4d *ret, const TSVector4d *v, const TSMatrix4x3d *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_mul(TSMatrix4x3f *ret, const TSMatrix4x3f *m0, const TSMatrix4x3f *m1);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_mul(TSMatrix4x3d *ret, const TSMatrix4x3d *m0, const TSMatrix4x3d *m1);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_normalize(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_normalize(TSMatrix4x3d *ret, const TSMatrix4x3d *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_transpose(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_transpose(TSMatrix4x3d *ret, const TSMatrix4x3d *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_inverse(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_inverse(TSMatrix4x3d *ret, const TSMatrix4x3d *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_inverse33(TSMatrix4x3f *ret, const TSMatrix4x3f *m);
TS_CAPI TSMatrix4x3d* TS_CCALL tsMatrix4x3d_inverse33(TSMatrix4x3d *ret, const TSMatrix4x3d *m);
TS_CAPI TSMatrix4x3f* TS_CCALL tsMatrix4x3f_lerp(TSMatrix4x3f *ret, const TSMatrix4x3f *m0, const TSMatrix4x3f *m1, float32_t k);
TS_CAPI void TS_CCALL tsQuaterniond_set(TSQuaterniond *q, const TSVector4d *row_0, const TSVector4d *row_1, const TSVector4d *row_2);
TS_CAPI void TS_CCALL tsQuaterniond_get(const TSQuaterniond *q, TSVector4d *row_0, TSVector4d *row_1, TSVector4d *row_2);