plugins/binding/swift/include/TellusimObjCMath.h

/*
 */
struct TSQuaternionf;
struct TSQuaterniond;
typedef TSVector2f Vector2f;
typedef TSVector2d Vector2d;
typedef TSVector3f Vector3f;
typedef TSVector3d Vector3d;
typedef TSVector4f Vector4f;
typedef TSVector4d Vector4d;
/*
 */
typedef TSMatrix4x3f Matrix4x3f;
typedef TSMatrix4x3d Matrix4x3d;
typedef TSMatrix4x4d Matrix4x4d;
/*
 */
typedef TSQuaternionf Quaternionf;
typedef TSQuaterniond Quaterniond;