plugins/binding/rust/source/TellusimRSMath.rs


/*
 */
declare_op!(Matrix4x3f, Vector2f, Vector2f, Mul, mul, tsMatrix4x3f_mul2);
declare_op!(Matrix4x3f, Vector3f, Vector3f, Mul, mul, tsMatrix4x3f_mul3);
declare_op!(Matrix4x3f, Vector4f, Vector4f, Mul, mul, tsMatrix4x3f_mul4);
declare_op!(Matrix4x3f, BoundRectf, BoundRectf, Mul, mul, tsMatrix4x3f_mul_br);
declare_op!(Matrix4x3f, BoundCirclef, BoundCirclef, Mul, mul, tsMatrix4x3f_mul_bc);
declare_op!(Matrix4x3f, BoundBoxf, BoundBoxf, Mul, mul, tsMatrix4x3f_mul_bb);
declare_op!(Matrix4x3f, BoundSpheref, BoundSpheref, Mul, mul, tsMatrix4x3f_mul_bs);
declare_op!(Vector2f, Matrix4x3f, Vector2f, Mul, mul, tsMatrix4x3f_mul2t);
declare_op!(Vector3f, Matrix4x3f, Vector3f, Mul, mul, tsMatrix4x3f_mul3t);
declare_op!(Vector4f, Matrix4x3f, Vector4f, Mul, mul, tsMatrix4x3f_mul4t);
declare_vector_op!(Matrix4x3f, Mul, mul, tsMatrix4x3f_mul);

/*
 */
extern "C" {
	fn tsMatrix4x3f_set(m: *mut Matrix4x3f, src: *const f32, size: u32, row_major: i32);
	fn tsMatrix4x3f_get(m: *const Matrix4x3f, dest: *mut f32, size: u32, row_major: i32);
	fn tsMatrix4x3f_scale(ret: *mut Matrix4x3f, x: f32, y: f32, z: f32) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_translate(ret: *mut Matrix4x3f, x: f32, y: f32, z: f32) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_rotateX(ret: *mut Matrix4x3f, angle: f32) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_rotateY(ret: *mut Matrix4x3f, angle: f32) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_rotateZ(ret: *mut Matrix4x3f, angle: f32) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_rotate(ret: *mut Matrix4x3f, axis: *const Vector3f, angle: f32) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_lookAt(ret: *mut Matrix4x3f, from: *const Vector3f, to: *const Vector3f, up: *const Vector3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_placeTo(ret: *mut Matrix4x3f, to: *const Vector3f, from: *const Vector3f, up: *const Vector3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_compose(ret: *mut Matrix4x3f, t: *const Vector3f, r: *const Quaternionf, s: *const Vector3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_basis(ret: *mut Matrix4x3f, normal: *const Vector3f, t: *const Vector3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_mul2(ret: *mut Vector2f, m: *const Matrix4x3f, v: *const Vector2f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_mul3(ret: *mut Vector3f, m: *const Matrix4x3f, v: *const Vector3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_mul4(ret: *mut Vector4f, m: *const Matrix4x3f, v: *const Vector4f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_mul_br(ret: *mut BoundRectf, m: *const Matrix4x3f, r: *const BoundRectf) -> *mut BoundRectf;
	fn tsMatrix4x3f_mul_bc(ret: *mut BoundCirclef, m: *const Matrix4x3f, c: *const BoundCirclef) -> *mut BoundCirclef;
	fn tsMatrix4x3f_mul_bb(ret: *mut BoundBoxf, m: *const Matrix4x3f, b: *const BoundBoxf) -> *mut BoundBoxf;
	fn tsMatrix4x3f_mul_bs(ret: *mut BoundSpheref, m: *const Matrix4x3f, s: *const BoundSpheref) -> *mut BoundSpheref;
	fn tsMatrix4x3f_mul2t(ret: *mut Vector2f, v: *const Vector2f, m: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_mul3t(ret: *mut Vector3f, v: *const Vector3f, m: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_mul4t(ret: *mut Vector4f, v: *const Vector4f, m: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_mul(ret: *mut Matrix4x3f, v0: *const Matrix4x3f, v1: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_normalize(ret: *mut Matrix4x3f, v: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_transpose(ret: *mut Matrix4x3f, v: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_inverse(ret: *mut Matrix4x3f, v: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_inverse33(ret: *mut Matrix4x3f, v: *const Matrix4x3f) -> *mut Matrix4x3f;
	fn tsMatrix4x3f_lerp(ret: *mut Matrix4x3f, v0: *const Matrix4x3f, v1: *const Matrix4x3f, k: f32) -> *mut Matrix4x3f;
}

/*****************************************************************************\
 *
 * Matrix4x3d
 *
\*****************************************************************************/

/*
 */
#[repr(C, align(16))]
#[derive(Copy, Clone)]
pub struct Matrix4x3d {
	pub row_0: Vector4d,
	pub row_1: Vector4d,
	pub row_2: Vector4d,
}

/*
 */
impl Matrix4x3d {
	
	pub fn new(row_0: &Vector4d, row_1: &Vector4d, row_2: &Vector4d) -> Matrix4x3d {
		Matrix4x3d { row_0: *row_0, row_1: *row_1, row_2: *row_2 }
	}
	pub fn new_m4x3f(m: &Matrix4x3f) -> Matrix4x3d {
		Matrix4x3d { row_0: Vector4d::new_v4f(&m.row_0), row_1: Vector4d::new_v4f(&m.row_1), row_2: Vector4d::new_v4f(&m.row_2) }
	}
	pub fn new_m4x4(m: &Matrix4x4d) -> Matrix4x3d {
		Matrix4x3d { row_0: m.row_0, row_1: m.row_1, row_2: m.row_2 }
	}
	pub fn new_q(q: &Quaterniond) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsQuaterniond_get(q, &mut ret.row_0, &mut ret.row_1, &mut ret.row_2) }
		ret
	}
	pub fn new_a(src: &[f64]) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_set(&mut ret, src.as_ptr(), src.len() as u32, 1) }
		ret
	}
	
	pub fn set(&mut self, src: &[f64]) {
		unsafe { tsMatrix4x3d_set(self, src.as_ptr(), src.len() as u32, 1) }
	}
	pub fn set_column_major(&mut self, src: &[f64]) {
		unsafe { tsMatrix4x3d_set(self, src.as_ptr(), src.len() as u32, 0) }
	}
	pub fn set_q(&mut self, q: &Quaterniond) {
		unsafe { tsQuaterniond_get(q, &mut self.row_0, &mut self.row_1, &mut self.row_2) }
	}
	pub fn get(&self, dest: &mut [f64]) {
		unsafe { tsMatrix4x3d_get(self, dest.as_mut_ptr(), dest.len() as u32, 1) }
	}
	pub fn get_column_major(&self, dest: &mut [f64]) {
		unsafe { tsMatrix4x3d_get(self, dest.as_mut_ptr(), dest.len() as u32, 0) }
	}
	pub fn get_q(&self, q: &mut Quaterniond) {
		unsafe { tsQuaterniond_set(q, &self.row_0, &self.row_1, &self.row_2) }
	}
	
	pub fn scale_s(s: f64) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_scale(&mut ret, s, s, s); }
		ret
	}
	pub fn scale(x: f64, y: f64, z: f64) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_scale(&mut ret, x, y, z); }
		ret
	}
	pub fn scale_v3(v: &Vector3d) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_scale(&mut ret, v.x, v.y, v.z); }
		ret
	}
	pub fn translate(x: f64, y: f64, z: f64) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_translate(&mut ret, x, y, z); }
		ret
	}
	pub fn translate_v3(v: &Vector3d) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_translate(&mut ret, v.x, v.y, v.z); }
		ret
	}
	pub fn rotate_x(angle: f64) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_rotateX(&mut ret, angle); }
		ret
	}
	pub fn rotate_y(angle: f64) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_rotateY(&mut ret, angle); }
		ret
	}
	pub fn rotate_z(angle: f64) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_rotateZ(&mut ret, angle); }
		ret
	}
	pub fn rotate(axis: &Vector3d, angle: f64) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_rotate(&mut ret, axis, angle); }
		ret
	}
	
	pub fn look_at(from: &Vector3d, to: &Vector3d, up: &Vector3d) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_lookAt(&mut ret, from, to, up); }
		ret
	}
	pub fn place_to(to: &Vector3d, from: &Vector3d, up: &Vector3d) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_placeTo(&mut ret, to, from, up); }
		ret
	}
	pub fn compose(t: &Vector3d, r: &Quaterniond, s: &Vector3d) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_compose(&mut ret, t, r, s); }
		ret
	}
	pub fn basis(normal: &Vector3d, t: &Vector3d) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_basis(&mut ret, normal, t); }
		ret
	}
	
	pub fn normalize(&self) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_normalize(&mut ret, self); }
		ret
	}
	pub fn transpose(&self) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_transpose(&mut ret, self); }
		ret
	}
	pub fn inverse(&self) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_inverse(&mut ret, self); }
		ret
	}
	pub fn inverse33(&self) -> Matrix4x3d {
		let mut ret = Matrix4x3d::default();
		unsafe { tsMatrix4x3d_inverse33(&mut ret, self); }
		ret
	}
	
	pub fn identity() -> Matrix4x3d {
		Matrix4x3d { row_0: Vector4d::new(1.0, 0.0, 0.0, 0.0), row_1: Vector4d::new(0.0, 1.0, 0.0, 0.0), row_2: Vector4d::new(0.0, 0.0, 1.0, 0.0) }
	}
}

/*
 */
impl Default for Matrix4x3d {
	fn default() -> Matrix4x3d {
		Matrix4x3d::identity()
	}
}

/*
 */
impl fmt::Display for Matrix4x3d {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1} : {2}", self.row_0, self.row_1, self.row_2)
	}
}

/*
 */
declare_op!(Matrix4x3d, Vector2d, Vector2d, Mul, mul, tsMatrix4x3d_mul2);
declare_op!(Matrix4x3d, Vector3d, Vector3d, Mul, mul, tsMatrix4x3d_mul3);
declare_op!(Matrix4x3d, Vector4d, Vector4d, Mul, mul, tsMatrix4x3d_mul4);
declare_op!(Matrix4x3d, BoundRectd, BoundRectd, Mul, mul, tsMatrix4x3d_mul_br);
declare_op!(Matrix4x3d, BoundCircled, BoundCircled, Mul, mul, tsMatrix4x3d_mul_bc);
declare_op!(Matrix4x3d, BoundBoxd, BoundBoxd, Mul, mul, tsMatrix4x3d_mul_bb);
declare_op!(Matrix4x3d, BoundSphered, BoundSphered, Mul, mul, tsMatrix4x3d_mul_bs);
declare_op!(Vector2d, Matrix4x3d, Vector2d, Mul, mul, tsMatrix4x3d_mul2t);
declare_op!(Vector3d, Matrix4x3d, Vector3d, Mul, mul, tsMatrix4x3d_mul3t);
declare_op!(Vector4d, Matrix4x3d, Vector4d, Mul, mul, tsMatrix4x3d_mul4t);
declare_vector_op!(Matrix4x3d, Mul, mul, tsMatrix4x3d_mul);
